feat: Added-section 1-3

--- a/index.html
+++ b/index.html
@@ -51,5 +51,42 @@
       </div>
     </div>
   </section>
+
+<section class="section2">
+  <div class="container2">
+    <div class="baslik1">Facebook'ta işletmenizi pazarlayın ve yeni müşterilerin <br> bulunduğu bir dünyaya erişin.</div>
+    <div class="content1">
+    <div class="image2"><img src="https://scontent.fesb4-2.fna.fbcdn.net/v/t39.8562-6/320445153_1193936371481574_3733961455796753606_n.jpg?stp=dst-webp&_nc_cat=111&ccb=1-7&_nc_sid=7785fb&_nc_ohc=Nv1zhFbkp1QQ7kNvgEDkQiN&_nc_ht=scontent.fesb4-2.fna&_nc_gid=Aablo-cHU-yuhGZHGHsZ3ek&oh=00_AYDN5k9wAQ3hev3gpu-DKKXiOTwGTIEH9Hu1YolttX7mqQ&oe=670770BE"  style="object-fit: cover; width: 100%; height: 100%;"></div>
+    <div class="des-image1">
+      <div class="des1">Müşteri tabanınızı genişletin. <br> <p>Dünyanın her yerinde insanlar Facebook'u bağlantı kurmak <br> ve keşif yapmak için kullanıyor. İşletmeler için Facebook, <br>yeni müşterilerin dikkatini çekmeyi ve kalıcı ilişkiler <br>kurmayı sağlayan güçlü bir teknoloji.</p>
+      <div class="des1-1">
+        <a href=""><img src="https://scontent.fasr2-1.fna.fbcdn.net/v/t39.8562-6/319121287_8398643580210653_106714808906248811_n.svg?_nc_cat=101&ccb=1-7&_nc_sid=f537c7&_nc_ohc=70r0AFKL1-UQ7kNvgF9ZRi2&_nc_ht=scontent.fasr2-1.fna&_nc_gid=AaeXeptqMY-CFvtMfDcfEHG&oh=00_AYDV_Kq_N7EKJJgWCoi0bdI9f1LrTADKILoR0LR8n0IOYg&oe=67095440" alt="" style="width: 30px;"></a>
+        <a href="">Hedef kitlenizi bulun</a></div>
+      </div>
+      <div class="des2">İşletme hedeflerinizi genişletin.</div>
+      <div class="des3">Hikayenizi her cihazda etkileyici bir biçimde anlatın.</div>
+    </div>
+    </div>
+  </div>
+</section>
+
+<section class="section3">
+  <div class="cont-text">Facebook ile büyüme potansiyeli sonsuzdur.</div>
+  <div class="container3">
+    <div class="cont-baslik">
+     <h1 style="font-size: 50px;">1,19 milyar</h1>
+     <p>Facebook'u her gün kullanan <br> kişi sayısı</p>
+    </div>
+    <div class="cont-baslik">
+      <h1 style="font-size: 50px;">2,96 milyar</h1>
+      <p>Facebook'u her ay kullanan kişi<br>sayısı</p>
+     </div>
+     <div class="cont-baslik">
+      <h1 style="font-size: 50px;">10 milyonu <br> aşkın</h1>
+      <p>Hizmetlerimizden aktif olarak <br> yararlanan reklam veren sayısı</p>
+     </div>
+    
+  </div>
+</section>
 </body>
 </html>
